tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_missing_field_in_match_struct_pattern/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: missing field y in struct Foo
  ┌─ src/main.nr:5:13
  │
5 │             Foo { x: _ } => {}
  │             ---
  │

Aborting due to 1 previous error
