tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_missing_field_in_match_struct_pattern/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: missing field y in struct Foo
  ┌─ src/main.nr:5:13
  │
5 │             Foo { x: _ } => {}
  │             ---
  │

Aborting due to 1 previous error
